@@ -1,10 +1,10 @@
 package ru.yandex.practicum.catsgram.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
+import ru.yandex.practicum.catsgram.exception.ConditionsNotMetException;
 import ru.yandex.practicum.catsgram.exception.ImageFileException;
 import ru.yandex.practicum.catsgram.exception.NotFoundException;
 import ru.yandex.practicum.catsgram.model.Image;
@@ -19,73 +19,15 @@ import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ImageService {
-    private final PostService postService;
+    private final String imageDirectory = "/Users/posoh/IdeaProjects/Catsgram/images";
 
     private final Map<Long, Image> images = new HashMap<>();
 
-    // директория для хранения изображений
-    @Value("${catsgram.image-directory}")
-    private String imageDirectory;
-
-    // загружаем данные указанного изображения с диска
-    public ImageData getImageData(long imageId) {
-        if (!images.containsKey(imageId)) {
-            throw new NotFoundException("Изображение с id = " + imageId + " не найдено");
-        }
-        Image image = images.get(imageId);
-        // загрузка файла с диска
-        byte[] data = loadFile(image);
-
-        return new ImageData(data, image.getOriginalFileName());
-    }
-    private byte[] loadFile(Image image) {
-        Path path = Paths.get(image.getFilePath());
-        if (Files.exists(path)) {
-            try {
-                return Files.readAllBytes(path);
-            } catch (IOException e) {
-                throw new ImageFileException("Ошибка чтения файла.  Id: " + image.getId()
-                        + ", name: " + image.getOriginalFileName());
-            }
-        } else {
-            throw new ImageFileException("Файл не найден. Id: " + image.getId()
-                    + ", name: " + image.getOriginalFileName());
-        }
-    }
-
-    // сохранение списка изображений, связанных с указанным постом
-    public List<Image> saveImages(long postId, List<MultipartFile> files) {
-        return files.stream().map(file -> saveImage(postId, file)).collect(Collectors.toList());
-    }
-
-    // сохранение отдельного изображения, связанного с указанным постом
-    private Image saveImage(long postId, MultipartFile file) {
-        Post post = postService.findPostById(postId);
-                //.orElseThrow(() -> new ConditionsNotMetException("Указанный пост не найден"));
-
-        // сохраняем изображение на диск и возвращаем путь к файлу
-        Path filePath = saveFile(file, post);
-
-        // создаём объект для хранения данных изображения
-        long imageId = getNextId();
-
-        // создание объекта изображения и заполнение его данными
-        Image image = new Image();
-        image.setId(imageId);
-        image.setFilePath(filePath.toString());
-        image.setPostId(postId);
-        // запоминаем название файла, которое было при его передаче
-        image.setOriginalFileName(file.getOriginalFilename());
-
-        images.put(imageId, image);
-
-        return image;
-    }
+    private final PostService postService;
 
     // сохранение файла изображения
     private Path saveFile(MultipartFile file, Post post) {
@@ -111,20 +53,71 @@ public class ImageService {
         }
     }
 
-    // получение данных об изображениях указанного поста
+    // сохранение отдельного изображения, связанного с указанным постом
+    private Image saveImage(long postId, MultipartFile file) {
+        Post post = postService.findById(postId)
+                .orElseThrow(() -> new ConditionsNotMetException("Указанный пост не найден"));
+
+        // сохраняем изображение на диск и возвращаем путь к файлу
+        Path filePath = saveFile(file, post);
+
+        // создаём объект для хранения данных изображения
+        long imageId = getNextId();
+
+        // создание объекта изображения и заполнение его данными
+        Image image = new Image();
+        image.setId(imageId);
+        image.setFilePath(filePath.toString());
+        image.setPostId(postId);
+        // запоминаем название файла, которое было при его передаче
+        image.setOriginalFileName(file.getOriginalFilename());
+
+        images.put(imageId, image);
+
+        return image;
+    }
+
+    private byte[] loadFile(Image image) {
+        Path path = Paths.get(image.getFilePath());
+        if (Files.exists(path)) {
+            try {
+                return Files.readAllBytes(path);
+            } catch (IOException e) {
+                throw new ImageFileException("Ошибка чтения файла.  Id: " + image.getId()
+                        + ", name: " + image.getOriginalFileName(), e);
+            }
+        } else {
+            throw new ImageFileException("Файл не найден. Id: " + image.getId()
+                    + ", name: " + image.getOriginalFileName());
+        }
+    }
+
     public List<Image> getPostImages(long postId) {
         return images.values()
                 .stream()
                 .filter(image -> image.getPostId() == postId)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    // сохранение списка изображений, связанных с указанным постом
+    public List<Image> saveImages(long postId, List<MultipartFile> files) {
+        return files.stream().map(file -> saveImage(postId, file)).toList();
+    }
+
+    public ImageData getImageData(long imageId) {
+        if (!images.containsKey(imageId)) {
+            throw new NotFoundException("Изображение с id = " + imageId + " не найдено");
+        }
+
+        Image image = images.get(imageId);
+
+        byte[] data = loadFile(image);
+
+        return new ImageData(data, image.getOriginalFileName());
     }
 
     private long getNextId() {
-        long currentMaxId = images.keySet()
-                .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
+        long currentMaxId = images.keySet().stream().mapToLong(id -> id).max().orElse(0);
         return ++currentMaxId;
     }
 
